gtk3: Fix thunar shortcuts side pane top-border
Remove top-border from thunar's shortcuts-pane, that was added
upstream in the following commit:
https://github.com/xfce-mirror/thunar/commit/7c117440c6d2a217f7055a60b3a223585e0f53a2

The border seems unnecessary, and looks bad especially for the darker
variant. There doesn't seem to be any technical need for it either.

--- a/common/gtk-3.0/3.20/sass/_applications.scss
+++ b/common/gtk-3.0/3.20/sass/_applications.scss
@@ -263,6 +263,10 @@ $disk_space_free: darken($bg_color, 3%);
       color: $selected_fg_color;
     }
   }
+
+  scrolledwindow.shortcuts-pane {
+    border-top-width: 0;
+  }
 }
 
 //
